--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "1. Iniciar proyecto node:   `npm init -y`",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine"
   },
   "author": "",
   "license": "ISC",
